# jellyfish

./: README.md
src/: CMakeLists.txt  module_teamplate.json
src/GoCrypto/: BasicApp.cpp  CMakeLists.txt  ConvertableCryptoInfoAdapter.cpp  ConvertableCryptoInfoAdapter.h  GoCrypto.h  LogAdapter.cpp  LogAdapter.h
src/GoCrypto/Engine/: NAPMarketEventHandler.cpp  NAPMarketEventHandler.h  Notifier.cpp  Notifier.h  PlatformEngine.cpp  PlatformEngine.h
src/GoCrypto/UI/: CiWidget.cpp  CiWidget.h  CiWndCandle.cpp  CiWndCandle.h  ImPopup.cpp  ImPopup.h  ImWidget.cpp  ImWidget.h  Panel.cpp  Panel.h  Spliter.cpp  Spliter.h  Widget.cpp  Widget.h  WxAppLog.cpp  WxAppLog.h  WxBarCharLive.cpp  WxBarCharLive.h  WxControlBoard.cpp  WxControlBoard.h  WxCryptoBoardInfo.cpp  WxCryptoBoardInfo.h  WxLineGraph.cpp  WxLineGraph.h  WxLineGraphLive.cpp  WxLineGraphLive.h  WxPointBaseGraph.cpp  WxPointBaseGraph.h  WxPriceTriggers.cpp  WxPriceTriggers.h  WxVolumeTriggers.cpp  WxVolumeTriggers.h
src/binance/: BinanceTradingPlatform.cpp  BinanceTradingPlatform.h  CMakeLists.txt
src/bitfinex/: BFXTradingPlatform.cpp  BFXTradingPlatform.h  CMakeLists.txt
src/cmake/: cinder-imgui.cmake  cinder.cmake
src/common/: AutoScope.cpp  AutoScope.h  CMakeLists.txt  CPPRESTBaseTradingPlatform.cpp  CPPRESTBaseTradingPlatform.h  CPPRESTBaseTradingPlatformThreadSafe.cpp  CPPRESTBaseTradingPlatformThreadSafe.h  SyncMessageQueue.hpp  Utility.cpp  Utility.h
src/configs/samples/: binance.json  bitfinex.json  platform_sample_configuration.json
src/cpprestsdk/: CMakeLists.txt
src/hitbtc/: CMakeLists.txt  HitBTCTradingPlatform.cpp  HitBTCTradingPlatform.h
src/trading-base/: CMakeLists.txt  MarketEventHandler.cpp  MarketEventHandler.h  SingleList.h  TradingBase.h  TradingPlatform.cpp  TradingPlatform.h
